ContactUs with email functionality implemented

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -5,3 +5,7 @@ VITE_storageBucket=
 VITE_messagingSenderId=
 VITE_appId=
 VITE_measurementId=
+VITE_EmailjsServiceId=
+VITE_EmailjsTemplateId_contactForm=
+VITE_EmailjsTemplateId_booksessionForm=
+VITE_EmailjsPublicKey=
