--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,5 +1,18 @@
 {
   "dependencies": {
-    "express": "^4.21.2"
-  }
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongoose": "^8.9.2",
+    "nodemon": "^3.1.9"
+  },
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "dev": "nodemon index.js"
+  },
+  "author": "Abid",
+  "license": "ISC",
+  "description": ""
 }
