--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "express": "^4.19.2",
     "firebase": "^10.12.3",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^2.2.0",
     "mongoose": "^8.5.0",
     "nodemon": "^3.1.4",
     "react": "^18.2.0",
