--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,7 +7,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
     "nodemailer": "^6.9.16",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "uuid": "^11.0.3"
   },
   "name": "backend",
   "version": "1.0.0",
