--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.7",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "firebase": "^10.12.3",
@@ -22,6 +23,7 @@
     "mongoose": "^8.5.0",
     "nodemon": "^3.1.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
