--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.8",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -8,6 +9,7 @@
     "mongoose": "^8.9.2",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9",
+    "react-chartjs-2": "^5.3.0",
     "uuid": "^11.0.3"
   },
   "name": "backend",
