--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,6 +7,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
+    "node-cron": "^4.0.6",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9",
     "react-chartjs-2": "^5.3.0",
@@ -16,7 +17,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start":"node index.js",
+    "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "author": "Abid",
